Change visibility of lang specific features column automatically
They use to be translated by $translate

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -711,7 +711,7 @@ itemscope itemtype="http://schema.org/WebApplication"
           portalName: '${portal_name}',
           dpUrl: '/lib/IE/bootstrap-datetimepicker.js',
           defaultTerrain: '${default_terrain}',
-          languages: '${languages}',
+          languages: '${languages}'.split(','),
           feedbackRecipient: '${feedback_recipient}'
         });
 
