Correct link for help
Go to /help instead for help.geo.admin.ch

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -167,7 +167,7 @@ itemscope itemtype="http://schema.org/WebApplication"
         <a href="" ng-click="globals.feedbackPopupShown = !globals.feedbackPopupShown">
           <span ng-class="{'selected': globals.feedbackPopupShown}" translate>problem_announcement</span>
         </a>&nbsp;&nbsp;
-        <a target="_blank" href="//help.geo.admin.ch/?lang={{langId}}" translate>help_label</a>&nbsp;&nbsp;
+        <a target="_blank" href="help/#?lang={{langId}}" translate>help_label</a>&nbsp;&nbsp;
   {% if legends_url %}
         <a target="_blank" href="${legends_url}" translate>legend_label</a>&nbsp;&nbsp;
   {% endif %}
