Use udt for features instead of ui-grid

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -40,7 +40,9 @@ itemscope itemtype="http://schema.org/WebApplication"
     <link rel="apple-touch-icon" sizes="120x120" href="${versionslashed}img/touch-icon-bund-120x120.png"/>
     <link rel="apple-touch-icon" sizes="152x152" href="${versionslashed}img/touch-icon-bund-152x152.png"/>
 
-    <link rel="styleSheet" href="style/ui-grid.css"/>
+    <link rel="styleSheet" href="style/ultimate-datatable-3.2.2-SNAPSHOT.css"/>
+    <link rel="styleSheet" href="http://institut-de-genomique.github.io/Ultimate-DataTable/js/font-awesome/css/font-awesome.min.css" />
+    <!--<link rel="styleSheet" href="http://institut-de-genomique.github.io/Ultimate-DataTable/js/bootstrap/css/bootstrap-3.3.4.min.css" />-->
 
     <!-- Description is translated 'by hand' in the MainController -->
     <meta name="description" content=""/>
@@ -631,11 +633,9 @@ itemscope itemtype="http://schema.org/WebApplication"
     <script src="lib/jquery-2.1.4.js"></script>
     <script src="lib/IE/jQuery.XDomainRequest.js"></script>
     <script src="lib/angular.js"></script>
-    <script src="lib/angular-load.js"></script>
     <script src="lib/angular-translate.js"></script>
     <script src="lib/angular-translate-loader-static-files.js"></script>
-    <script src="lib/csv.js"></script>
-    <script src="lib/ui-grid.js"></script>
+    <script src="lib/ultimate-datatable-3.2.2-SNAPSHOT.js"></script>
     <script src="lib/IE/d3-3.3.1.js"></script>
     <script src="lib/bootstrap-3.3.1.js"></script>
     <script src="lib/typeahead-0.9.3.js"></script>
