Correctly prefix the print directive and controller by 'gf3'

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -342,11 +342,11 @@ itemscope itemtype="http://schema.org/WebApplication"
             <span translate>print</span>
           </a>
           <div id="print" class="panel-collapse collapse">
-            <div class="panel-body" ng-controller="GfPrintController">
-                <div ga-print
-                   ga-print-map="map"
-                   ga-print-options="options"
-                   ga-print-active="globals.printShown"></div>
+            <div class="panel-body" ng-controller="Gf3PrintController">
+                <div gf3-print
+                   gf3-print-map="map"
+                   gf3-print-options="options"
+                   gf3-print-active="globals.printShown"></div>
             </div>
           </div>
         </div>  <!-- .panel -->
