Add option to disable offline mode
Close #101

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -801,6 +801,7 @@ itemscope itemtype="http://schema.org/WebApplication"
         var module = angular.module('gf3');
         module.constant('gf3GlobalOptions', {
           allowWebdav: ${front.gf3.allow_webdav | lower},
+          allowOffline: ${front.gf3.allow_offline | lower},
           allowInfobox: ${front.gf3.allow_infobox | lower}
         });
       })();
