Correct missing fonts problem on windows

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -41,7 +41,7 @@ itemscope itemtype="http://schema.org/WebApplication"
     <link rel="apple-touch-icon" sizes="152x152" href="${versionslashed}img/touch-icon-bund-152x152.png"/>
 
     <link rel="styleSheet" href="style/ultimate-datatable-3.2.2-SNAPSHOT.css"/>
-    <link rel="styleSheet" href="style/font-awesome.min.css" />
+    <link rel="styleSheet" href="style/font-awesome-4.5.0/css/font-awesome.min.css" />
     <!--<link rel="styleSheet" href="http://institut-de-genomique.github.io/Ultimate-DataTable/js/bootstrap/css/bootstrap-3.3.4.min.css" />-->
 
     <!-- Description is translated 'by hand' in the MainController -->
