--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -160,11 +160,7 @@ itemscope itemtype="http://schema.org/WebApplication"
 {% if device != 'embed' %}
     <div ng-cloak translate-cloak id="header" class="navbar navbar-fixed-top">
       <a href="?topic={{topicId}}&lang={{langId}}">
-        <div id="logo" class="pull-left ga-logo">
-          <i class="fa fa-ga-logo-bund"></i>
-          <div class="ga-logo-text"></div>
-          <div class="ga-logo-text ga-subtitle-{{langId}}"></div>
-        </div>
+        <div id="logo" class="pull-left ga-logo ga-logo-{{langId}}"></div>
       </a>
       <div id="search-container" ng-controller="GaSearchController">
         <div ga-search ga-search-map="map" ga-search-options="options" ga-search-focused="globals.searchFocused" ga-search-ol3d="::ol3d"></div>
