Improve print spinner

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -636,6 +636,7 @@ itemscope itemtype="http://schema.org/WebApplication"
     <script src="lib/angular-translate-loader-static-files.js"></script>
     <script src="lib/ultimate-datatable.js"></script>
     <script src="lib/d3.js"></script>
+    <script src="lib/spin.js"></script>
     <script src="lib/bootstrap.js"></script>
     <script src="lib/typeahead-0.9.3.js"></script>
     <script src="lib/proj4js-compressed.js"></script>
