Load maki images from a public resource server
Allow images to be loaded even on protected portals

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -710,6 +710,7 @@ itemscope itemtype="http://schema.org/WebApplication"
           adminUrlRegexp: new RegExp('${front.build.admin_url_regexp}'),
           cachedApiUrl: location.protocol + '${front.build.api_url}' + cacheAdd,
           resourceUrl: location.origin + pathname + '${versionslashed}',
+          publicResourceUrl: '${front.build.public_resource_url}',
           ogcproxyUrl : location.protocol + '${front.build.api_url}' + '/ogcproxy?url=',
           whitelist: [
             'https://' + window.location.host + '/**'
