Add support for default EPSG other than 21781
- Add suppport for secondary EPSG
- Use gaGlobalOptions.defaultEpsg instead of 'EPSG:21781'
- Use gaGlobalOptions.secondaryEpsg instead of 'EPSG:2056'
- Reframe by URL is done by gaGlobalOptions.defaultToSecondaryEpsgUrl
- Allow WMTS layers to be in a different projection than the default by
using an epsg attribute in layersConfig
- Convert permalink to default EPSG in it is contained in secondary EPSG
extent
- In context popop:
- display the coordinates in the default EPSG then in the secondary
EPSG
- use gaGlobalOptions.defaultEpsgContextPopupTitle and
gaGlobalOptions.secondaryEpsgContextPopupTitle to display the correct
projection title

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -723,6 +723,11 @@ itemscope itemtype="http://schema.org/WebApplication"
           lods: [],
           defaultEpsg: '${geoportal.epsg}',
           defaultEpsgExtent: ${geoportal.epsg_extent},
+          defaultEpsgContextPopupTitle: '${geoportal.epsg_context_popup_title}',
+          secondaryEpsg: '${geoportal.secondary_epsg}',
+          secondaryEpsgExtent: ${geoportal.secondary_epsg_extent},
+          secondaryEpsgContextPopupTitle: '${geoportal.secondary_epsg_context_popup_title}',
+          defaultToSecondaryEpsgUrl: '${geoportal.default_to_secondary_epsg_url}',
           {% if front.default_values.wms_list %}
           wmsList: ${front.default_values.wms_list},
           {% endif %}
