Build admin and public regexes from API and public URLs

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -706,8 +706,8 @@ itemscope itemtype="http://schema.org/WebApplication"
           mapUrl: location.origin + '${front.build.apache_base_path}',
           apiUrl: location.protocol + '${front.build.api_url}',
           publicUrl : location.protocol + '${front.build.public_url}',
-          publicUrlRegexp: new RegExp('${front.build.public_url_regexp}'),
-          adminUrlRegexp: new RegExp('${front.build.admin_url_regexp}'),
+          publicUrlRegexp: new RegExp('${front.build.public_url}'),
+          adminUrlRegexp: new RegExp('${front.build.api_url}'),
           cachedApiUrl: location.protocol + '${front.build.api_url}' + cacheAdd,
           resourceUrl: location.origin + pathname + '${versionslashed}',
           publicResourceUrl: '${front.build.public_resource_url}',
