Add getDefaultToSecondary and getSecondaryToDefault methods to ReframeService

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -767,6 +767,7 @@ itemscope itemtype="http://schema.org/WebApplication"
           secondaryEpsgExtent: ${geoportal.secondary_epsg_extent},
           secondaryEpsgContextPopupTitle: '${geoportal.secondary_epsg_context_popup_title}',
           defaultToSecondaryEpsgUrl: '${geoportal.default_to_secondary_epsg_url}',
+          secondaryToDefaultEpsgUrl: '${geoportal.secondary_to_default_epsg_url}',
           {% if front.default_values.wms_list %}
           wmsList: ${front.default_values.wms_list},
           {% endif %}
