--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -805,7 +805,7 @@ itemscope itemtype="http://schema.org/WebApplication"
           gaLayersProvider.dfltWmsSubdomains = ['', '0', '1', '2', '3', '4'];
           gaLayersProvider.dfltWmtsNativeSubdomains = ['5', '6', '7', '8', '9'];
           gaLayersProvider.dfltWmtsMapProxySubdomains = ['20', '21', '22', '23', '24'];
-          gaLayersProvider.dfltVectorTilesSubdomains = staging === 'prod' ? ['100', '101', '102', '103', '104'] : ['', '0', '1', '2', '3', '4'];
+          gaLayersProvider.dfltVectorTilesSubdomains = ['', '0', '1', '2', '3', '4'];
           gaLayersProvider.wmsUrlTemplate = '//wms{s}.geo.admin.ch/';
           gaLayersProvider.wmtsGetTileUrlTemplate = '//wmts{s}.geo.admin.ch/1.0.0/{Layer}/default/{Time}/{TileMatrixSet}/{z}/{y}/{x}.{Format}';
           gaLayersProvider.wmtsMapProxyGetTileUrlTemplate = '//wmts{s}.geo.admin.ch/1.0.0/{Layer}/default/{Time}/{TileMatrixSet}/{z}/{x}/{y}.{Format}';
