Enable attributes edition with WFS-T
- Store the list and description of a layer in the ol layer object.
- Pass the list of the attributes of the layer to the popup.
- Emit an event each time an attribute is modified to update the "save"
message.
- Add fields to view and edit attributes to the proper directive.

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -633,7 +633,8 @@ itemscope itemtype="http://schema.org/WebApplication"
            ga-popup-options="options"
            id="gf3-edit-features-popup"
            class="ga-popup-mobile-bottom bottom">
-        <div gf3-edit-feature-attrs="feature">
+        <div gf3-edit-feature-attrs="feature"
+             gf3-edit-feature-attrs-list="attributes">
         </div>
       </div>
     </div>
