Add style option for feature selection

--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -886,6 +886,13 @@ itemscope itemtype="http://schema.org/WebApplication"
             hlStroke: {
               color: ${front.gf3.get('styles', {}).get('hlStroke', {}).get('color', 'null')},
               width: ${front.gf3.get('styles', {}).get('hlStroke', {}).get('width', 'null')}
+            },
+            selectFill: {
+              color: ${front.gf3.get('styles', {}).get('selectFill', {}).get('color', 'null')}
+            },
+            selectStroke: {
+              color: ${front.gf3.get('styles', {}).get('selectStroke', {}).get('color', 'null')},
+              width: ${front.gf3.get('styles', {}).get('selectStroke', {}).get('width', 'null')}
             }
           }
         });
