--- a/src/index.nunjucks.html
+++ b/src/index.nunjucks.html
@@ -705,11 +705,17 @@ itemscope itemtype="http://schema.org/WebApplication"
         if ('${front.build.dev_host_regexp}' && (new RegExp('${front.build.dev_host_regexp}')).test(location.hostname)) {
           hostIsProd = false;
         }
+        {% if front.get('build', {}).get('dev3d', False) %}
+        var dev3d = true;
+        {% else %}
+        var dev3d = false;
+        {% endif %}
+
 
         ngeo.baseModuleTemplateUrl = 'ngeo/src/modules';
         module.constant('gaGlobalOptions', {
           //dev3d to be removed once 3d goes live
-          dev3d: false,
+          dev3d: dev3d,
           buildMode: '${type}',
           externalWmsHostnames: ${front.default_values.external_wms_hostnames},
           mapUrl: location.origin + '${front.build.apache_base_path}',
